Add some basic structures

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,23 @@
 <h1>
   {{title}}
 </h1>
+
+<button md-button>Refresh</button>
+<button md-button>Add feed</button>
+<button md-button>Unread</button>
+<button md-button>All</button>
+<button md-button>Search</button>
+
+<md-toolbar>
+  <span>News:</span>
+  <md-toolbar-row>
+    <span> This is some nice news</span>
+    <span class="example-spacer"></span>
+    <i class="material-icons">done</i>
+  </md-toolbar-row>
+  <md-toolbar-row>
+    <span> This is some bad news</span>
+    <span class="example-spacer"></span>
+    <i class="material-icons">done</i>
+  </md-toolbar-row>
+</md-toolbar>
